--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -115,6 +115,7 @@ ru:
   popular: Популярные
   product_actions: Действия с товаром
   product_in_cart: Товар находится в корзине
+  product_category_for_import: Категория продуктов для импорта товаров
   product_name: Название товара
   product_price: Цена
   quantity: Количество
