--- a/config/locales/ru/time_date.ru.yml
+++ b/config/locales/ru/time_date.ru.yml
@@ -42,6 +42,7 @@ ru:
       default: ! '%d.%m.%Y'
       long: ! '%-d %B %Y'
       short: ! '%-d %b'
+      main: '%d/%m/%Y'
     month_names:
     -
     - января
