feature add default image for photoable objects

--- a/config/locales/ru/active_record.ru.yml
+++ b/config/locales/ru/active_record.ru.yml
@@ -194,6 +194,7 @@ ru:
         state: Статус
         file: Файл
         position: Позиция
+        default: Фотография по умолчанию
       characteristic_category:
         <<: *main
       characteristic:
