add ability to remove product and product categories

--- a/config/locales/ru/activeadmin.ru.yml
+++ b/config/locales/ru/activeadmin.ru.yml
@@ -79,6 +79,7 @@ ru:
         moderated: Отправить на модерацию
         send_newletters: Разослать пользователям
         import: Импортировать
+        super_destroy: Полностью удалить
     comments:
       resource_type: "Тип ресурса"
       author_type: "Тип автора"
