--- a/config/locales/ru/active_record.ru.yml
+++ b/config/locales/ru/active_record.ru.yml
@@ -264,5 +264,8 @@ ru:
       models:
         'product/import_entry':
           stores: Необходимо указать хотя бы 1 магазин
-          brand: Бренд не найден
-          store: Магазин не найден
+          brand: 'Бренд не найден: %{title}'
+          store: 'Магазин не найден: %{title}'
+          price: Необходимо указать стоимость продукта
+          title: Товар должен иметь название
+          euro_price: Необходимо указать хотя бы 0
