--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -75,6 +75,7 @@ ru:
   ask_a_question: Задать вопрос
   authentication: Авторизация
   authentication_help_info: 'Вход/Регистрация илипокупка без регистрации'
+  blank: Пусто
   brands: Бренды
   cart: Корзина
   cart_with_count: 'Корзина (%{count})'
