add published products to brand card, with_published_products scope

--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -120,6 +120,7 @@ ru:
   product_category_for_import: Категория продуктов для импорта товаров
   product_name: Название товара
   product_price: Цена
+  products_from_brand: Все товары бренда
   quantity: Количество
   question: Вопрос
   questions: Ваши вопросы
