products show presenter

--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -144,6 +144,7 @@ ru:
   set_your_email: Укажите вашу почту
   show: Показать
   successfully_add_to_wishlist: Товар успешно добавлен с список желаний
+  technical_details: Технические детали
   to_subscribe: Подписаться
   total_amount: Общая сумма
   useful_information: 'Полезная информация'
