hot fix [ci skip]

--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -151,4 +151,5 @@ ru:
   you_might_also_like: Вам может понравится
   you_watched: Вы смотрели
   your_wishlist_is_empty: Ваш список желаний пока пуст
+  your_cart_empty_yet: Пока вы не добавили ни одного товара в вашу корзину
   what_are_you_looking_for: Что вы ищете?
