locales for some devise\s views and config for sendmail [ci skip]

--- a/config/locales/ru/devise.ru.yml
+++ b/config/locales/ru/devise.ru.yml
@@ -37,15 +37,28 @@ ru:
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по восстановлению вашего пароля."
       updated: "Ваш пароль изменён. Теперь вы вошли в систему."
       send_paranoid_instructions: "Если ваш адрес e-mail есть в нашей базе данных, то в течение нескольких минут вы получите письмо с инструкциями по восстановлению вашего пароля."
+      new:
+        forgot_your_password: Забыли Ваш пароль?
+        send_reset_password_instruction: Выслать инструкции
+      edit:
+        change_password: Изменить пароль
+        new_password: Новый пароль
+        confirm_new_password: Повторите ввод пароля
+        change_my_password: Изменить мой пароль
     confirmations:
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по подтверждению вашей учётной записи."
       send_paranoid_instructions: "Если ваш адрес e-mail есть в нашей базе данных, то в течение нескольких минут вы получите письмо с инструкциями по подтверждению вашей учётной записи."
       confirmed: "Ваша учётная запись подтверждена. Теперь вы вошли в систему."
+      new:
+        resend_confirmation_instruction: Переотправить подтверждение учетной записи
+        resend: Переотправить
     registrations:
       signed_up: "Добро пожаловать! Вы успешно зарегистрировались."
       inactive_signed_up: "Добро пожаловать! Вы успешно зарегистрировались. Но пока вы не можете войти в систему, т.к. ваша учётная запись %{reason}."
       updated: "Ваша учётная запись изменена."
       destroyed: "До свидания! Ваша учётная запись удалена. Надеемся снова увидеть вас."
+      new:
+        registration: Регистрация
     unlocks:
       send_instructions: "В течение нескольких минут вы получите письмо с инструкциями по разблокировке вашей учётной записи."
       unlocked: "Ваша учётная запись разблокирована. Теперь вы вошли в систему."
