hotfix product in stock on index and other pages

--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -119,6 +119,7 @@ ru:
   my_wishlist: Мой список желаний
   new_products: Новинки
   news: Новости
+  not_available: Нет в наличии
   notificatins_mail: Уведомления на почту
   our_production: Наша продукция
   page_not_found: Страница не найдена
