--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -136,12 +136,13 @@ ru:
   quantity: Количество
   question: Вопрос
   questions: Ваши вопросы
-  save: Сохранить
   sale: Sale
+  save: Сохранить
   search: Поиск
-  searching: Идет поиск
   search_result: 'Результаты поиска "%{request}"'
+  searching: Идет поиск
   set_your_email: Укажите вашу почту
+  should_be_filled: Должен быть заполнен
   show: Показать
   sign_up: Зарегистрироваться
   successfully_add_to_wishlist: Товар успешно добавлен с список желаний
@@ -149,8 +150,8 @@ ru:
   to_subscribe: Подписаться
   total_amount: Общая сумма
   useful_information: 'Полезная информация'
+  what_are_you_looking_for: Что вы ищете?
   you_might_also_like: Вам может понравится
   you_watched: Вы смотрели
-  your_wishlist_is_empty: Ваш список желаний пока пуст
   your_cart_empty_yet: Пока вы не добавили ни одного товара в вашу корзину
-  what_are_you_looking_for: Что вы ищете?
+  your_wishlist_is_empty: Ваш список желаний пока пуст
