--- a/config/locales/ru/flash.ru.yml
+++ b/config/locales/ru/flash.ru.yml
@@ -27,3 +27,6 @@ ru:
       create:
         success: Спасибо за подписку
         error: 'Попробуйте еще раз, возникли ошибки'
+    orders:
+      update:
+        error: Не допустимое значение для следующего шага
