--- a/config/locales/ru/orders.ru.yml
+++ b/config/locales/ru/orders.ru.yml
@@ -34,3 +34,4 @@ ru:
       total_amount: Полная стоимость
       payment_type: Способ оплаты
       delivery_type: Способ доставки
+      pay: Оплатить
