--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -116,6 +116,7 @@ ru:
   go_to_wishlist: 'В список "Мне нравится"'
   goods_supplied: Товары в комплект
   i_like: Мне нравится
+  inconsistency_of_data: Несоответствие данных
   my_profile: Мой профиль
   my_question: Мой вопрос
   my_wishlist: Мой список желаний
