fix locale [ci skip]

--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -161,7 +161,7 @@ ru:
   total_amount: Общая сумма
   useful_information: 'Полезная информация'
   what_are_you_looking_for: Что вы ищете?
-  you_might_also_like: Вам может понравится
+  you_might_also_like: Вам может понравиться
   you_watched: Вы смотрели
   your_cart_empty_yet: Пока вы не добавили ни одного товара в вашу корзину
   your_wishlist_is_empty: Ваш список желаний пока пуст
