add locale for select2 and update some gems

--- a/config/locales/ru/devise.ru.yml
+++ b/config/locales/ru/devise.ru.yml
@@ -28,6 +28,8 @@ ru:
       invalid_token: "Неверный ключ аутентификации."
       timeout: "Ваш сеанс закончился. Пожалуйста, войдите в систему снова."
       inactive: "Ваша учётная запись ещё не активирована."
+      admin_user:
+        not_found_in_database: Email пользователя или пароль не верны
     sessions:
       signed_in: "Приветствуем!"
       signed_out: "До свидания!"
