--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -133,6 +133,8 @@ ru:
   orders_not_yet: Пока у вас нет истории заказов
   our_production: Наша продукция
   page_not_found: Страница не найдена
+  payment_fail: Ошибка оплаты
+  payment_success: Успешная оплата
   phone: Телефон
   popular: Популярные
   produce: Продукция
