--- a/config/locales/ru/time_date.ru.yml
+++ b/config/locales/ru/time_date.ru.yml
@@ -1,11 +1,12 @@
 ru:
   time:
     am: утра
+    pm: вечера
     formats:
       default: ! '%a, %d %b %Y, %H:%M:%S %z'
       long: ! '%d %B %Y, %H:%M'
       short: ! '%d %B %Y'
-    pm: вечера
+      yandex: '%FT%T.%L%:z'
 
   date:
     abbr_day_names:
