a lot of fixes and enhancements

--- a/config/locales/ru/active_record.ru.yml
+++ b/config/locales/ru/active_record.ru.yml
@@ -223,6 +223,7 @@ ru:
         properties: Св-ва
         weight: Вес
         add_to_yandex_market: Добавить в Яндекс Маркет
+        fix_price: Фиксированная цена
       product_category:
         <<: *main
         products: Продукты
