price format to int, add link to dialers

--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -99,6 +99,7 @@ ru:
     spb: Санкт-Петербург
     moscow: Москва
     no_matches_found: Городов не найдено
+  dealers: Дилерам
   default: По умолчанию
   delete: Удалить
   email: Электронная почта
