add specs for policies

--- a/config/locales/ru/ru.yml
+++ b/config/locales/ru/ru.yml
@@ -153,6 +153,7 @@ ru:
   question: Вопрос
   questions: Ваши вопросы
   refund_of_money: Возврат денег
+  resellers: Реселлерам
   sale: Sale
   safety: Безопасность
   save: Сохранить
@@ -170,6 +171,7 @@ ru:
   useful_information: 'Полезная информация'
   what_are_you_looking_for: Что вы ищете?
   who_we_are: Кто мы
+  you_should_be_logged_in: Вы должны быть авторизованы
   you_might_also_like: Вам может понравиться
   you_watched: Вы смотрели
   your_cart_empty_yet: Пока вы не добавили ни одного товара в вашу корзину
